# project-devore

./: .gitignore  Cargo.toml  README.md
designer/: .dockerignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  moon.yml  package.json  tailwind.config.ts
designer/app/: globals.css  layout.tsx  page.tsx
designer/components/layout/: DockviewLayout.tsx  TopToolbar.tsx
designer/components/nodes/: ClusterOutputNode.tsx  GridGeneratorNode.tsx
designer/components/panels/: CreationList.tsx  GraphView.tsx  Inspector.tsx  Preview.tsx
designer/components/ui/: button.tsx  card.tsx  input.tsx  scroll-area.tsx  slider.tsx
designer/hooks/: useDarkMode.ts
designer/lib/: nodeExecution.ts
designer/src/: App.tsx  Routes.tsx  constants.ts
designer/src/api/: api_client.ts
designer/src/hooks/: useLogEntries.ts
designer/src/pages/: Home.tsx  LogEntry.tsx  ObjImporter.tsx  Settings.tsx
designer/store/: flowStore.ts  previewStore.ts
designer/types/: drone.ts  nodes.ts
docker/: ardupilot-sil.Dockerfile  compose-sil.yaml
log_utils/: Cargo.toml  README.md
log_utils/src/: lib.rs  main.rs
log_utils/src/parquet_ops/: mod.rs
log_utils/src/tui/: app.rs  mod.rs
log_utils/src/utils/: mod.rs
pubsub/: Cargo.toml
pubsub/logs/20250409_172912/: test_pub.csv  test_pub.parquet
pubsub/src/: lib.rs  main.rs
pubsub/src/message/: builder.rs  from_record.rs  into_message.rs  mod.rs  packet.rs  record.rs
pubsub/src/message/builders/: mod.rs  publish.rs  subscribe.rs
pubsub/src/tasks/: info.rs  logging.rs  meta_control.rs  mod.rs  runner.rs  state.rs  subscription_queue.rs  task.rs
quad/: Cargo.toml
quad/src/: lib.rs
quad/src/ardulink/: config.rs  connection.rs  mod.rs  task.rs
scripts/: script.json
sim/: Cargo.toml
sim/src/: main.rs
viz/: CHANGES.sh  CLEANUP_SUMMARY.md  DATATABLE_STYLING.md  DATA_SELECTION.md  FIXES_COMPLETE.md  IMPLEMENTATION.md  INFINITE_LOOP_FIX.md  LAYOUT.md  MULTI_SELECT_3D_FEATURES.md  PARQUET_INTEGRATION.md  PLAYBACK_SYNC.md  REFACTOR_SUMMARY.md  UPDATES.md  package.json  vite.config.ts
viz/src/: App.tsx  react-three-fiber.d.ts
(+73 files in other folders)
