[package]
name = "log_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
arrow = "55.0.0"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
crossterm = { version = "0.29.0", optional = true }
parquet = "55.0.0"
ratatui = { version = "0.29.0", optional = true }
walkdir = "2.5.0"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]
