[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"


[lib]

[dependencies]
anyhow = "1.0.97"
arrow = "54.3.1"
clap = { version = "4.5.35", features = ["derive"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["sync", "time"] }
