[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
arrow = "54.3.1"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
log = "0.4.27"
parquet = { version = "54.3.1", features = ["arrow"] }
pretty_env_logger = "0.5.0"
prettytable = "0.10.0"
rusty-docker-compose = "0.3.1"

rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["sync", "time"] }
uuid = { version = "1.16.0", features = ["v4"] }

pubsub = { path = "../pubsub" }
quad = { path = "../quad" }